--- a/client-jss/src/app/main/components/generic-hub/generic-hub.component.html
+++ b/client-jss/src/app/main/components/generic-hub/generic-hub.component.html
@@ -46,7 +46,7 @@
                           <div class="d-flex flex-wrap">
                             <a *ngFor="let category of post.jssCategories"
                               [routerLink]=' "/post/category/" + category.slug'
-                              class="badge bg-info rounded-pill px-2">{{ category.name }}</a>
+                              class="badge bg-info badge-category rounded-pill px-2">{{ category.name }}</a>
 
                             <bookmark *ngIf="currentUser" [post]="post"></bookmark>
                           </div>
@@ -77,7 +77,7 @@
                         <div class="card-flex-content">
                           <div class="d-flex flex-wrap gap-1">
                             <a *ngFor="let cat of post.jssCategories" [routerLink]=' "/post/category/" + cat.slug'
-                              class="badge bg-info rounded-pill px-2">{{ cat.name }}</a>
+                              class="badge bg-info badge-category rounded-pill px-2">{{ cat.name }}</a>
 
                             <bookmark *ngIf="currentUser" [post]="post"></bookmark>
                           </div>
