--- a/client-myjss/src/app/modules/quotation/components/notice-template/notice-template.component.html
+++ b/client-myjss/src/app/modules/quotation/components/notice-template/notice-template.component.html
@@ -102,78 +102,75 @@
               <div class="my-4"
                 *ngFor="let fragmentInstance of fragmentInstancesMap.get(selectedFragments[i]!.code); let fragmentIndex=index">
 
-                <div class="col">
-                  <div class="row row-cols-3 g-3" *ngIf="fragmentInstance">
-                    <div class="col" *ngFor="let placeholder of placeholdersMap.get(fragmentInstance!.code)">
+                <div
+                  *ngIf="fragmentInstancesMap.get(selectedFragments[i]!.code)!.length>1 && fragmentIndex == fragmentInstancesMap.get(selectedFragments[i]!.code)!.length-1"
+                  class="row justify-content-end px-3 ">
+                  <button type="button" class="btn btn-sm btn-icon btn-outline-danger rounded-4 mt-n2"
+                    aria-label="Delete" (click)="deleteFragmentInstance(selectedFragments[i]!.code)">
+                    <i class="ai-trash"></i>
+                  </button>
+                </div>
+                <div class="row row-cols-3 g-3" *ngIf="fragmentInstance">
+                  <div class="col" *ngFor="let placeholder of placeholdersMap.get(fragmentInstance!.code)">
 
-                      <!-- Wrap inputs automatically to next line -->
-                      <div class="">
+                    <!-- Wrap inputs automatically to next line -->
+                    <div class="">
 
-                        <!-- TEXT -->
-                        <generic-input *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_TEXT"
-                          [(model)]="placeholder.label"
-                          [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
-                          [form]="form"
-                          [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
-                          [isDisabled]="false" [isMandatory]="false" [maxLength]="255">
-                        </generic-input>
+                      <!-- TEXT -->
+                      <generic-input *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_TEXT"
+                        [(model)]="placeholder.label"
+                        [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
+                        [form]="form"
+                        [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
+                        [isDisabled]="false" [isMandatory]="false" [maxLength]="255">
+                      </generic-input>
 
-                        <!-- TEXTAREA -->
-                        <generic-textarea *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_TEXTAREA"
-                          [ngClass]="{'w-100': placeholder.dataType === SERVICE_FIELD_TYPE_TEXTAREA}"
-                          [(model)]="placeholder.value"
-                          [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
-                          [form]="form"
-                          [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
-                          [isDisabled]="false" [isMandatory]="false">
-                        </generic-textarea>
+                      <!-- TEXTAREA -->
+                      <generic-textarea *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_TEXTAREA"
+                        [ngClass]="{'w-100': placeholder.dataType === SERVICE_FIELD_TYPE_TEXTAREA}"
+                        [(model)]="placeholder.value"
+                        [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
+                        [form]="form"
+                        [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
+                        [isDisabled]="false" [isMandatory]="false">
+                      </generic-textarea>
 
-                        <!-- DATE -->
-                        <generic-date-picker *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_DATE"
-                          [(model)]="placeholder.value"
-                          [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
-                          [form]="form"
-                          [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
-                          [isMandatory]="false" [isDisabled]="false">
-                        </generic-date-picker>
+                      <!-- DATE -->
+                      <generic-date-picker *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_DATE"
+                        [(model)]="placeholder.value"
+                        [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
+                        [form]="form"
+                        [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
+                        [isMandatory]="false" [isDisabled]="false">
+                      </generic-date-picker>
 
-                        <!-- INTEGER -->
-                        <generic-input *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_INTEGER"
-                          [(model)]="placeholder.value"
-                          [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
-                          [form]="form"
-                          [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
-                          [isDisabled]="false" type="number">
-                        </generic-input>
+                      <!-- INTEGER -->
+                      <generic-input *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_INTEGER"
+                        [(model)]="placeholder.value"
+                        [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
+                        [form]="form"
+                        [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
+                        [isDisabled]="false" type="number">
+                      </generic-input>
 
-                        <!-- SELECT -->
-                        <select-value-service-field-type *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_SELECT"
-                          [(model)]="placeholder.value"
-                          [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
-                          [form]="form"
-                          [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
-                          [isMandatory]="false" [isDisabled]="false">
-                        </select-value-service-field-type>
+                      <!-- SELECT -->
+                      <select-value-service-field-type *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_SELECT"
+                        [(model)]="placeholder.value"
+                        [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
+                        [form]="form"
+                        [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
+                        [isMandatory]="false" [isDisabled]="false">
+                      </select-value-service-field-type>
 
-                        <!-- DEFAULT / UNKNOWN -->
-                        <generic-input *ngIf="!placeholder.dataType" [model]="placeholder.value"
-                          (onFormFocus)="setSelectedFragment(fragmentInstance.code)"
-                          [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
-                          [form]="form"
-                          [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
-                          [isMandatory]="true" [isDisabled]="false" type="text">
-                        </generic-input>
+                      <!-- DEFAULT / UNKNOWN -->
+                      <generic-input *ngIf="!placeholder.dataType" [model]="placeholder.value"
+                        (onFormFocus)="setSelectedFragment(fragmentInstance.code)"
+                        [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
+                        [form]="form"
+                        [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
+                        [isMandatory]="true" [isDisabled]="false" type="text">
+                      </generic-input>
 
-                      </div>
-                    </div>
-                    <div class="col align-content-end"
-                      *ngIf="fragmentInstancesMap.get(selectedFragments[i]!.code)!.length>1 && fragmentIndex == fragmentInstancesMap.get(selectedFragments[i]!.code)!.length-1">
-                      <div class="row justify-content-end px-3">
-                        <button type="button" class="btn btn-icon btn-outline-danger rounded-4" aria-label="Delete"
-                          (click)="deleteFragmentInstance(selectedFragments[i]!.code)">
-                          <i class="ai-trash"></i>
-                        </button>
-                      </div>
                     </div>
                   </div>
                 </div>
