--- a/client/src/app/modules/administration/components/referentials/referential-service/referential-service-type.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-service/referential-service-type.component.html
@@ -134,6 +134,25 @@
               </td>
             </tr>
           </table>
+          <table class="full-width">
+            <tr>
+              <td *ngIf="assoServiceProvisionType.provisionType.isCouldNotifyBodacc">
+                <generic-toggle [(model)]="assoServiceProvisionType.isNotifyBodacc"
+                  label="Notifier des modifications au BODACC ?" [form]="entityForm"
+                  propertyName="isNotifyBodacc"></generic-toggle>
+              </td>
+              <td *ngIf="assoServiceProvisionType.provisionType.isCouldNotifyBalo">
+                <generic-toggle [(model)]="assoServiceProvisionType.isNotifyBalo"
+                  label="Notifier des modifications au BALO ?" [form]="entityForm"
+                  propertyName="isNotifyBalo"></generic-toggle>
+              </td>
+              <td *ngIf="assoServiceProvisionType.provisionType.isCouldNotifyJo">
+                <generic-toggle [(model)]="assoServiceProvisionType.isNotifyJo"
+                  label="Notifier des modifications au JO ?" [form]="entityForm"
+                  propertyName="isNotifyJo"></generic-toggle>
+              </td>
+            </tr>
+          </table>
           <table class="full-width" style="padding-top: 20px;">
             <tr>
               <td>
