fix '<p>' from new templates website

--- a/src/main/resources/mails/templates/send-prices-request.html
+++ b/src/main/resources/mails/templates/send-prices-request.html
@@ -125,7 +125,7 @@
                                                                 style="padding-left:10px;padding-right:10px;width:100%;">
                                                                 <p>Bonjour,</p>
                                                                 <p>Nous avons reçu une demande de tarifs de la part du
-                                                                    client suivant </P><span
+                                                                    client suivant </p><span
                                                                     th:text="${explaination}"></span>
                                                                 <p>. Merci de prendre contact avec ce dernier.
                                                                 </p>
