--- a/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
+++ b/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
@@ -217,7 +217,7 @@
                   <li class="list-group-item py-0" *ngFor="let phone of quotation.responsable.tiers.phones">
                     <div class="d-flex flex-wrap w-100">
                       <div>
-                        <a class="nav-link fs-xl p-2" (click)="deletePhone(phone, quotation.responsable, true)">
+                        <a class="nav-link fs-xl p-2" (click)="deletePhoneTiers(phone, quotation.responsable.tiers)">
                           <i class="ai-trash"></i>
                         </a>
                       </div>
