--- a/client-jss/src/assets/css/style.css
+++ b/client-jss/src/assets/css/style.css
@@ -13710,6 +13710,20 @@ img[class^="wp-image-"] {
   background: linear-gradient(to right, #FF5757 0%, #FF5757 var(--progress), #dee2e6 var(--progress), #dee2e6 100%);
 }
 
+/* --- Firefox --- */
+.form-range::-moz-range-track {
+  background-color: #dee2e6;
+  height: 8px;
+  border-radius: 10px;
+}
+
+.form-range::-moz-range-progress {
+  height: 6px;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  background-color: #FF5757;
+}
+
 /* Bouton (thumb) invisible */
 .form-range::-webkit-slider-thumb {
   -webkit-appearance: none;
