--- a/client/src/app/modules/quotation/components/service/service.component.html
+++ b/client/src/app/modules/quotation/components/service/service.component.html
@@ -57,7 +57,7 @@
             </div>
 
             <div class="doc-attachments"
-              *ngIf="quotation && instanceOfCustomerOrder(quotation) && quotation.pendingAttachments && editMode">
+              *ngIf="quotation && instanceOfCustomerOrder(quotation) && quotation.pendingAttachments && quotation.pendingAttachments.length>0 && editMode">
               <select-attachment [(model)]="selectedPendingAttachments[index]" label="Pièces de la demande initiale"
                 [form]="serviceForm" [types]="quotation.pendingAttachments"
                 [propertyName]="'selectedPendingAttachments'+index" [isMandatory]="false"
