--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -115,7 +115,7 @@
 
                   <div class="row">
                     <div
-                      *ngIf="!provision.isRedactedByJss && getPossibleTemplates( quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex]) &&  getPossibleTemplates( quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex])!.length>0 && noticeTemplateDescription"
+                      *ngIf="!provision.isRedactedByJss && getPossibleTemplates( quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex])  && noticeTemplateDescription"
                       class="col-12 col-lg-6 form-check form-switch">
                       <generic-toggle [(model)]="noticeTemplateDescription.isUsingTemplate"
                         label="Utiliser les modèles proposés pour la rédaction" [form]="informationForm"
