added encart for payment of deposit in quotation

--- a/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.html
@@ -26,6 +26,15 @@
       [routerLink]='"/account/orders/details/" + associatedCustomerOrder.id'>{{associatedCustomerOrder.id}}</a>
   </div>
 </div>
+<div class="alert alert-danger d-flex  flex-column flex-md-row align-items-center mb-0 mb-2" role="alert"
+  *ngIf="quotation && quotation.quotationStatus && quotation.quotationStatus.code == QUOTATION_STATUS_SENT_TO_CUSTOMER && isDepositPaymentMandatoryForQuotation">
+  <i class="ai-circle-info fs-xl"></i>
+  <div class="ps-2">Payez votre acompte pour lancer le traitement de votre commande !</div>
+  <a class="btn btn-sm btn-primary  mt-3 mt-md-0 ms-4" [routerLink]=' "/account/order/pay/" + quotation.id'>
+    <i class="ai-cart ms-n1 me-2"></i>
+    <span>Payer l'acompte</span>
+  </a>
+</div>
 <div class="d-flex flex-column flex-md-row align-items-center mb-4"
   *ngIf="quotation && quotationAssoAffaireOrders && quotationAssoAffaireOrders.length>1 && selectedAssoAffaireOrder">
   <div class="ms-auto">
