--- a/client/src/app/modules/quotation/components/kanban-order/kanban-order.component.html
+++ b/client/src/app/modules/quotation/components/kanban-order/kanban-order.component.html
@@ -21,7 +21,7 @@
         </td>
         <td>
           <button *ngIf="orderStatistics" mat-mini-fab color="primary"
-            [matTooltip]="'A facturer : '+orderStatistics.orderToOrder+' / Assignées : '+orderStatistics.orderAssigned+' / Blockées : '+orderStatistics.orderBlocked"
+            [matTooltip]="'A créer : '+orderStatistics.orderToOrder+' / Assignées : '+orderStatistics.orderAssigned+' / Blockées : '+orderStatistics.orderBlocked"
             class="add-button"> {{orderStatistics.orderToOrder}}
           </button>
         </td>
